remove api-level guava usage in BasicAnnotationProcessor